# src/main/java/com/ckt/controller/ProjectController.java
@@ -6,7 +6,7 @@ import com.ckt.entity.Project;
 import com.ckt.entity.User;
 import com.ckt.service.ProjectService;
 import com.ckt.service.UserService;
-import com.ckt.utils.HTTPConstant;
+import com.ckt.utils.HttpConstant;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
@@ -49,12 +49,37 @@ public class ProjectController {
                 } else {
                     project.setMemId(data.getInteger("mem_id"));
                     project.setProjectTitle(data.getString("project_name"));
-                    project.setProjectSummary(data.getString("project_description"));
-                    project.setEndTime(data.getString("project_end_time"));
+                    if (data.containsKey("project_description")) {
+                        project.setProjectSummary(data.getString("project_description"));
+                    } else {
+                        project.setProjectSummary("");
+                    }
+                    if (data.containsKey("project_end_time")) {
+                        project.setEndTime(data.getString("project_end_time"));
+                    } else {
+                        project.setEndTime("");
+                    }
                     project.setCreateTime(data.getString("project_create_time"));
-                    project.setAccomplishProgress(data.getString("project_acomplish_progress"));
-                    project.setSprint(data.getInteger("project_sprint_count"));
-                    project.setTeamId(data.getInteger("team_id"));
+                    if (data.containsKey("project_acomplish_progress")) {
+                        project.setAccomplishProgress(data.getString("project_acomplish_progress"));
+                    } else {
+                        project.setAccomplishProgress("0");
+                    }
+                    if (data.containsKey("project_sprint_count")) {
+                        project.setSprint(data.getInteger("project_sprint_count"));
+                    } else {
+                        project.setSprint(1);
+                    }
+                    if (data.containsKey("team_id")) {
+                        project.setTeamId(data.getInteger("team_id"));
+                    } else {
+                        project.setTeamId(1);
+                    }
+                    if (data.containsKey("project_visibility")) {
+                        project.setProjectVisibility(data.getInteger("project_visibility"));
+                    } else {
+                        project.setProjectVisibility(0);
+                    }
                     project.setLastUpdateTime(String.valueOf(System.currentTimeMillis()));
                     projectService.newProject(project);
                     object.put("resultcode", 200);
@@ -64,10 +89,12 @@ public class ProjectController {
             }
 
         } catch (NullPointerException e) {
-
+            e.printStackTrace();
+            object.put("resultcode", 500);
 
         } catch (Exception e) {
-
+            e.printStackTrace();
+            object.put("resultcode", 600);
         }
 
         return object.toJSONString();
@@ -81,16 +108,26 @@ public class ProjectController {
         try {
             String email = request.getParameter("email");
             String token = request.getParameter("token");
+            String targetEmail = request.getParameter("target_email");
             User user = userService.loginStatus(email, token);
             if (user == null) {
-                resultJson.put(HTTPConstant.RESLUT_CODE, 300);
+                resultJson.put(HttpConstant.RESLUT_CODE, 300);
             } else {
-                List<Project> projects = projectService.getProjects(user.getMem_id());
-                resultJson.put(HTTPConstant.RESLUT_CODE, 200);
-                resultJson.put("data", projects);
+                Integer targetId = userService.getMemId(targetEmail);
+                if (targetId == null) {
+                    resultJson.put(HttpConstant.RESLUT_CODE, 400);
+                } else {
+                    List<Project> projects = projectService.getProjects(targetId);
+                    if (targetId != user.getMem_id()) {
+                        projectService.sceenProject(projects);
+                    }
+                    resultJson.put("data", projects);
+                    resultJson.put(HttpConstant.RESLUT_CODE, 200);
+                }
+
             }
         } catch (Exception e) {
-            resultJson.put(HTTPConstant.RESLUT_CODE, 400);
+            resultJson.put(HttpConstant.RESLUT_CODE, 400);
             e.printStackTrace();
         }
 
